<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.adiga.greenthumbclient.UserChoiceFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/text_location"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toTopOf="@+id/driver_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        android:text="@string/usertyperequeststring"
        tools:text="Request question are you a driver or a rider"/>

    <Button
        android:id="@+id/driver_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/text_location"
        app:layout_constraintTop_toBottomOf="@+id/text_location"
        android:text="@string/driverbuttonstring"
        tools:text="Driver" />

    <Button
        android:id="@+id/rider_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/riderbuttonstring"
        app:layout_constraintEnd_toEndOf="@+id/text_location"
        app:layout_constraintTop_toTopOf="@+id/driver_button" />

</android.support.constraint.ConstraintLayout>
